# src/app/api/purchase-order/[poId]/route.ts
@@ -13,12 +13,12 @@ type PoIdParams = {
 export async function GET(request: NextRequest, { params }: PoIdParams) {
   const poId = Number(params.poId);
 
-  if (!poId) {
-    return NextResponse.json(
-      { message: "Purchasing Order ID is required" },
-      { status: 400 }
-    );
-  }
+  // if (!poId) {
+  //   return NextResponse.json(
+  //     { message: "Purchasing Order ID is required" },
+  //     { status: 400 }
+  //   );
+  // }
 
   try {
     const purchaseOrderDetails = await db
@@ -29,6 +29,12 @@ export async function GET(request: NextRequest, { params }: PoIdParams) {
       .from(purchaseOrderDetail)
       .where(eq(purchaseOrderDetail.poId, poId));
 
+    if (!purchaseOrderDetails || purchaseOrderDetails.length === 0) {
+      return NextResponse.json(
+        { message: `No purchase order found with ID ${poId}` },
+        { status: 404 }
+      );
+    }
     const shipIdRecord = await db
       .select({
         shipId: purchaseOrder.shipId,
